--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "contact-form-project",
+  "homepage": "https://luan-services.github.io/contact-form-project/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,12 +8,16 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+  	"predeploy": "npm run build",
+	  "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
